--- a/Part-0/0.6.md
+++ b/Part-0/0.6.md
@@ -1,22 +1,14 @@
+```mermaid
 sequenceDiagram
     participant browser
     participant server
 
-    Note right of browser: The user clicks "Save"
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    Note right of browser: The browser adds the new note to the list and re-renders the note list on the screen
+
+    browser->>server: POST [https://studies.cs.helsinki.fi/exampleapp/new_note_spa](https://studies.cs.helsinki.fi/exampleapp/new_note_spa)
     activate server
-    server-->>browser: HTTP 302 Found (Redirect to /notes)
+    server-->>browser: {"message":"note created"} (HTTP 201 Created)
     deactivate server
 
-    Note right of browser: The browser reloads the page
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
-    activate server
-    server-->>browser: HTML Document
-    deactivate server
-
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
-    activate server
-    server-->>browser: the css file
-    deactivate server
-
-    %% Add the requests for main.js and data.json here...
+    Note right of browser: The browser stays on the same page and sends no further requests
+```
